# self-driving-prius

./: LABGROUP.md  Readme.md
control_solution/: CMakeLists.txt  package.xml
control_solution/launch/: solution.launch
control_solution/src/: control_solution_node.cpp
opencv_solution/: CMakeLists.txt  package.xml
opencv_solution/src/: opencv_solution.cpp
pcl_solution/: CMakeLists.txt  package.xml
pcl_solution/src/: pcl_solution_node.cpp
